# filedge

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bigquery-integration.yml  ci.yml  container.yml  docs.yml  release.yml  snowflake-integration.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/PRD/: index.html
0.1.2/architecture/: index.html
0.1.2/getting-started/: index.html
0.1.2/release-checklist/: index.html
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/PRD/: index.html
0.2.0/architecture/: index.html
0.2.0/getting-started/: index.html
0.2.0/release-checklist/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/PRD/: index.html
0.3.0/architecture/: index.html
0.3.0/getting-started/: index.html
0.3.0/guides/: index.html
0.3.0/release-checklist/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorials/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/PRD/: index.html
0.4.0/architecture/: index.html
0.4.0/getting-started/: index.html
0.4.0/guides/: index.html
0.4.0/release-checklist/: index.html
0.4.0/search/: search_index.json
0.4.0/tutorials/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/PRD/: index.html
0.5.0/architecture/: index.html
0.5.0/getting-started/: index.html
0.5.0/guides/: index.html
0.5.0/release-checklist/: index.html
0.5.0/search/: search_index.json
0.5.0/tutorials/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/PRD/: index.html
0.6.0/architecture/: index.html
0.6.0/getting-started/: index.html
0.6.0/guides/: index.html
0.6.0/release-checklist/: index.html
0.6.0/search/: search_index.json
0.6.0/tutorials/: index.html
demo/duckdb/: README.md  pipeline.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/edgar/: pipeline.yaml  sources.yaml
docs/: PRD.md  getting-started.md  index.md  release-checklist.md
docs/adr/: 0001-single-transaction-commit.md  0002-content-hash-as-idempotency-key.md  0003-strict-mode-validation.md  0004-audit-connector-split.md  0005-sftp-out-of-scope.md  0006-api-sources-fetched-to-files.md  0007-queue-source-ingestion-model.md  0008-schema-inference-confidence-tiers.md  0009-warehouse-cdc-applied-file-markers.md  0010-audit-export-static-site.md  0011-source-manifest-and-lineage.md  0012-excel-format-support.md  0013-fixed-width-format-support.md  0014-column-level-field-encryption.md  0015-control-and-audit-platform-starts-with-local-pipeline-authoring.md  0016-authoring-ui-textual-tui.md  0017-pipeline-folder-and-registry-layout.md  0018-reference-fetcher-external-companion.md  0019-dead-letter-quarantine.md  0020-iceberg-table-format-via-materializer.md  0021-companion-output-ndjson-parquet-at-boundary.md  0022-sql-connector-shared-base.md
docs/agents/: domain.md
docs/architecture/: decisions.md  index.md
docs/guides/: api-source-adapters.md  api-sources.md  audit-export.md  author.md  cdc-files.md  compact.md  crash-retry.md  deploy.md  edgar-demo.md  file-formats.md  fixed-width.md  healthcheck.md  index.md  inspect.md  observability.md  preview.md  quarantine.md  queue-sources.md  requeue.md  run.md  scale.md  source-manifests.md  stripe-duckdb-demo.md  validate.md
docs/reference/: cli.md  column-types.md  connectors.md  pipeline-yaml.md
docs/tutorials/: index.md
etl/: cli.py  compactor.py  config.py  db.py  filesystem.py  hashing.py  inferrer.py  inspect_formatter.py  loader.py  parser.py  pipeline.py  transform.py  validate_formatter.py  validator.py
etl/connectors/: __init__.py  bigquery.py  duckdb.py  postgres.py  sqlite.py
example/: pipeline.yaml
examples/: sources.yaml
examples/stripe-duckdb/: pipeline.yaml  sources.yaml
filedge/: audit_records.py  authoring.py  authoring_browse.py  authoring_draft.py  authoring_ui.py  authoring_validation.py  authoring_workflow.py  cdc.py  cli.py  column_types.py  compactor.py  config.py  db.py  excel.py  exporter.py  field_crypto.py  file_registration.py  file_sample.py  filesystem.py  fixed_width.py  hashing.py  health.py  identifiers.py  inferrer.py  inspect_formatter.py  key_resolver.py  load_stream.py  loader.py  log.py  metrics.py  parser.py  pipeline.py  pipeline_folder.py  pipeline_registry.py  pipeline_resolution.py  preview_formatter.py  progress.py  reference.py  schema.py  serve.py  (+6 more)
filedge/companion/: __init__.py  errors.py  promotion.py  published_file.py  staging.py
filedge/connectors/: __init__.py  bigquery.py  databricks.py  duckdb.py  postgres.py  snowflake.py  sql_base.py  sqlite.py
filedge/fetch/: __init__.py  cli.py  cursor_state.py  errors.py  manifest_emitter.py  orchestrator.py  promotion.py  source_adapters.py  source_client.py  sources_config.py
filedge/materialize/: cli.py  (+7 more)
tests/: conftest.py  test_audit_record_read_model.py  test_authoring.py  test_authoring_browse.py  test_authoring_draft.py  test_authoring_ui.py  test_authoring_validation.py  test_authoring_workflow.py  test_cdc_apply.py  test_cli.py  test_cli_inspect.py  test_cli_inspect_remote.py  test_cli_parquet.py  test_cli_preview.py  test_cli_validate.py  test_compactor.py  test_companion_manifest.py  test_companion_promotion.py  test_companion_published_file.py  test_companion_staging.py  test_config.py  test_connector_bigquery.py  test_connector_bigquery_unit.py  test_connector_databricks.py  test_connector_databricks_integration.py  test_connector_duckdb.py  test_connector_health.py  test_connector_postgres.py  test_connector_snowflake.py  test_connector_snowflake_integration.py  test_connector_sqlite.py  test_connectors.py  test_crash_retry.py  test_db.py  test_docs_walkthroughs.py  test_encoding.py  test_excel.py  test_exporter.py  test_fetch_cli.py  test_fetch_client_cursor.py  (+55 more)
(+288 files in other folders)
