[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filedge"
version = "0.1.1"
description = "Atomic file ingestion with content-hash idempotency and a full audit trail — into SQLite, PostgreSQL, BigQuery, Databricks, or DuckDB."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Tony Qiu", email = "tongqing.qiu@gmail.com" },
]
keywords = ["etl", "data-engineering", "ingestion", "pipeline", "audit", "idempotency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://tongqqiu.github.io/filedge/"
Repository = "https://github.com/tongqqiu/filedge"
Documentation = "https://tongqqiu.github.io/filedge/"
"Bug Tracker" = "https://github.com/tongqqiu/filedge/issues"
Changelog = "https://github.com/tongqqiu/filedge/releases"

[project.scripts]
filedge = "filedge.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.15.14", "fsspec>=2023.0"]
postgres = ["psycopg2-binary>=2.9.12"]
bigquery = ["google-cloud-bigquery>=3.0"]
databricks = ["databricks-sql-connector>=3.0", "fsspec>=2023.0"]
duckdb = ["duckdb>=1.0", "pyarrow>=14.0"]
parquet = ["pyarrow>=14.0"]
s3 = ["fsspec>=2023.0", "s3fs>=2026.4.0"]
gcs = ["fsspec>=2023.0", "gcsfs>=2023.0"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.0"]

[tool.hatch.build.targets.wheel]
packages = ["filedge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
